--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
         <link href="./styles.css" rel="stylesheet">
+        <script src="./script.js" defer></script>
         <title>Home</title>
     </head>
     <body>
@@ -14,12 +14,12 @@
                 <h1>Daniel's homepage</h1>
             </div>
             <nav>
-                <img src="./menu.svg" alt="Menu">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">My History</a></li>
-                    <li><a href="index.html">Science</a></li>
-                    <li><a href="index.html">Karate</a></li>
+                <i class="fas fa-bars" id="nav-btn"></i>
+                <ul id="pages">
+                    <li><a href="index.html" class="link-secondary">Home</a></li>
+                    <li><a href="history.html" class="link-secondary">My History</a></li>
+                    <li><a href="science.html" class="link-secondary">Science</a></li>
+                    <li><a href="karate.html" class="link-secondary">Karate</a></li>
                 </ul>
             </nav>
         </header>
