--- a/history.html
+++ b/history.html
@@ -27,6 +27,16 @@
             </ul>
         </nav>
     </header>
-    <h1>My History</h1>
+    <section id="history">
+        <p>
+            I was born in Bloemfontein, Free State, South Africa, but we moved to Welkom where I was raised when I was two years old. I went to China where I eventually found coding and came back to South Africa to fulfill my dream of being a programmer.
+        </p>
+    </section>
+    <section>
+        <img src="./images/download.jpg" alt="table mountain">
+    </section>
+    <footer>
+        <span>&copy; 2021 Daniel de Ru for the purpose of CS50</span>
+    </footer>
 </body>
 </html>
