--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
                 </ul>
             </nav>
         </header>
-        <h1>Home</h1>
+        <main>
+            <section id="intro">
+                <p>
+                    Hi, my name is <strong>Daniel</strong> and I am an <em>aspiring software engineer</em>. I love learning and working with new languages to build cool stuff. This website is about my hobbies and interests check the menu  for more information.
+                </p>
+            </section>
+            <section id="social">
+                <h2>Follow me on</h2>
+                <ul id="social-icon-container">
+                    <li class="btn btn-warning"><i class="fab fa-instagram"><a href="https://instagram.com"></a></i></li>
+                    <li class="btn btn-warning"><i class="fab fa-facebook"><a href="https://facebook.com"></a></i></li>
+                    <li class="btn btn-warning"><i class="fab fa-youtube"><a href="https://www.youtube.com/channel/UC-c15g_qvx6j4hQ5U5Rc-aw"></a></i></li>
+                    <li class="btn btn-warning"><i class="fab fa-linkedin"><a href="https://linkedin.com"></a></i></li>
+                    <li class="btn btn-warning"><i class="fab fa-github"><a href="https://github.com/daniel-deru"></a></i></li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+            <span>&copy; 2021 Daniel de Ru for the purpose of CS50</span>
+        </footer>
     </body>
 </html>
