--- a/science.html
+++ b/science.html
@@ -27,6 +27,16 @@
             </ul>
         </nav>
     </header>
-    <h1>Science Page</h1>
+    <section id="sci-desc">
+        <p>
+            When I was 16 years old I saw Neil deGrasse Tyson on Cosmos and knew I wanted to be a scientist. I fell in love with science and love learning new things about how the world works around me. there is comfort in the known and fear in the abscence of knowledge.
+        </p>
+    </section>
+    <section id="sci-img">
+        <img src="./images/undraw_science_fqhl.svg" alt="science">
+    </section>
+    <footer>
+        <span>&copy; 2021 Daniel de Ru for the purpose of CS50</span>
+    </footer>
 </body>
 </html>
