--- a/karate.html
+++ b/karate.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./karate.css">
     <title>Karate</title>
 </head>
 <body>
@@ -27,6 +28,16 @@
             </ul>
         </nav>
     </header>
-    <h1>Karate Page</h1>
+    <section id="karate-desc">
+        <p>
+            I started karate when I was six years old and practiced for 15 years. I obtained my black belt at 17. I participated in several national level championships and even won a few. Karate has been an essential part of my life teaching me the values of discipline, integrity and respect which makes up a big part of who I am today.
+        </p>
+    </section>
+    <section id="fist">
+        <img src="./images/undraw_black_lives_matter_rndk.svg" alt="fist">
+    </section>
+    <footer>
+        <span>&copy; 2021 Daniel de Ru for the purpose of CS50</span>
+    </footer>
 </body>
 </html>
